committing all modified changes to css_advanced

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -4,159 +4,167 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
-            <ul> 
-            <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/bts-logo.png" alt="bts-logo"/>          
-               <li><a href="#">Courses</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Login</a></li>
-            </ul>
+     <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/bts-logo.png" class="logo" alt="bts-logo"/>  
+     <div class="link_header" style="margin-left: 1000px;">
+         <a href="#" style="margin-left: auto;">Courses</a>
+        <a href="#">Pricing</a>
+        <a href="#">Login</a>
+        </div>
         </nav>
     </header>
+    
     <main>
-        <div class="section_one">
-        <section>
-            <h1>Get schooled</h1>
+                <section style="background-color: dimgray;">
+            <h1 style="text-align: center;">Get schooled</h1>
+            <div class="section_one">
              <span>Smile</span>
              <span>Grin</span>
              <span>Laugh</span>
-            <button>Register for free</button>
-       </div>
+                 </div>
+                 <button style="margin-bottom: auto; text-align: center;">Register for free</button>
     <div class="heading_h2">
          <h2>learn from the pros</h2>
          </div>
-            <div class="section_a">
-            <img src="images/xuimin.jpg" width="150px" height="150px" alt="xuimin image">
-            <h4>Kim Minseok</h4>
+         <div class="executives">
+            <span class="ex1">
+            <img src="images/cute.png" width="150px" height="150px" style="border-radius: 50%;" alt="Felix image">
+            <h4>Felix</h4>
             <p>The CEO</p>
-            </div>
-        <div class="section_b">
-            <img src="images/Suho.jpg" width="150px" height="150px" alt="Suho image">
-            <h4>Kim Suho</h4>
+        </span>
+        <span class="ex2">
+            <img src="images/ceo.png" width="150px" height="150px" style="border-radius: 50%;" alt="Christopher image">
+            <h4>Christopher</h4>
             <p>Managing Director</p>
-        </div>
-        <div class="section_c">
-            <img src="images/Sehun.jpg" width="150px" height="150px" alt="Sehun image">
-            <h4>Oh Sehun</h4>
+        </span>
+        <span class="ex3">
+            <img src="images/mexico.png" width="150px" height="150px" style="border-radius: 50%;" alt="Jisung image">
+            <h4>Jisung</h4>
             <p>Programs Manager</p>
-        </div>
-        <div class="section_d">
-            <img src="images/Yixing.jpg" width="150px" height="150px" alt="yixing image">
-            <h4>Lay Yixing</h4>
+        </span>
+        <span class="ex4">
+            <img src="images/strong.png" width="150px" height="150px" style="border-radius: 50%;" alt="Jennifer image">
+            <h4>Jennifer</h4>
             <p>Supervisor</p>
-        </div>
-    </section>
-       <section>
-        <div>
-        <img src="images/Sally.jpg" width="150px" height="150px" alt="Sally picture">
+        </span>
     </div>
-       <div>
+    </section>
+           <section style="background-color: blueviolet;">       
+    <img src="images/Sally.jpg" width="150px" height="150px" style="border-radius: 50%; padding: 20px; text-align: center;" alt="Sally picture">
+    <div class="quote_section">
+               <span>
     <q>These tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. it is so much fun!</q>
+       </span>
+       <span class="quote_text">
      <h4>Sally</h4>
      <p>Benefector</p>
-      </div>
-           </section>
-              <section>
+         </span>
+       </div>
+               </section>
+                             <section>
                     <h2>The purpose of the programme</h2>
-        <div class="section_part1">
-       <video src="video/trebit.mp4"width="150px" height="150px" controls>video of trebit </video>
-          <img src="images/my boo.jpg" width="150px" height="150px" alt="Image of my bias">
+                    <div class="videos_list">
+        <span class="section_part1">
+       <video src="videos/trebit.mp4"width="150px" height="150px" controls>video of trebit </video>
+          <img src="images/my boo.jpg" width="30px" height="30px" style="border-radius: 80%;" alt="Image of my bias">
           <h4>Han Jisung</h4>
                     <p>Jisung explain the benefits of joining the programme</p>
-                    <div>
-                        <div class="section_part2">
-                    <video src="video/search bar.mp4" width="150px" height="150px" controls>video of search</video>
-         <img src="images/Chen.jpg" width="150px" height="150px" alt="image of Chen">
+                </span>
+                 <span class="section_part2">
+                    <video src="videos/search bar.mp4" width="150px" height="150px" controls>video of search</video>
+         <img src="images/Chen.jpg" width="30px" height="30px" style="border-radius: 80%;" alt="image of Chen">
          <h4>Kim Chen</h4>
          <p>Chen explaining how affordable it is to enroll</p>
-        </div>
-        <div class="section_part3">
-         <video src="video/tFoot.mp4" width="150px" height="150px" controls>video of table foot</video>
-        <img src="images/cream soda.jpg" width="150px" height="150px" alt="image of Exo">
+            </span>
+        <span class="section_part3">
+         <video src="videos/tFoot.mp4" width="150px" height="150px" controls>video of table foot</video>
+        <img src="images/cream soda.jpg" width="30px" height="30px" style="border-radius: 80%; alt="image of Exo">
         <h4>Fellow Men</h4>
         <p>The big men singing the main theme for this year</p>
-         </div>
-           <div class="section_part4">
-        <video src="video/nesting.mp4" width="150px" height="150px" controls>video of controls</video>
-         <img src="images/Kai.jpg" width="150px" height="150px" alt="Image of Kai">
+    </span> 
+          <span class="section_part4">
+        <video src="videos/nesting.mp4" width="150px" height="150px" controls>video of controls</video>
+         <img src="images/Kai.jpg" width="30px" height="30px"style="border-radius: 80%; alt="Image of Kai">
          <h4>Kim Kai</h4>
          <p>Kai explain the impact of the programme to the yputh globally</p>
-        </div>
-         <img src="images/bb.jpg" width="150px" height="150px"  alt="Image of Baek">
-         <h4>Byun Baekhyun</h4>
-         <span>&#9733;</span>
-         <span>&#9733;</span>
-         <span>&#9733;</span>
-         <span>&#9734;</span>
-         <span>&#9734;</span>
-         <p>Ratings for the programme by the youth around the world</p>
-        </div>
-        </section>
-             <section>
-<div>
-          <h2>Membership</h2>
-          <img src="images/my members.jpg" width="150px" height="150px"  alt="the members picture">
+        </span>
+    </div>
+                </section>
+             <section class="members">
+                  <h2>Membership</h2>
+                  <div class="member_container">
+                    <span class="m1">
+          <img src="images/globe.png" width="150px" height="150px" style="border-radius: 80%" alt="the members picture">
           <h4>Full name</h4>
           <p>Write your names in full</p>
-        </div>
-        <div>
-          <img src="images/new.jpg" width="150px" height="150px" alt="the image of new">
+        </span>
+        <span class="m2">
+          <img src="images/globe.png" width="150px" height="150px" style="border-radius: 80%"  alt="the image of new">
           <h4>Email address</h4>
           <p>Enter your correct email address</p>
-          <img src="images/Exo.jpg" width="150px" height="150px" alt="image of Exo">
+        </span>
+        <span class="m3">
+          <img src="images/globe.png" width="150px" height="150px" style="border-radius: 80%" alt="image of Exo">
           <h4>your location</h4>
           <p>Enter your current location</p>
-        </div> 
-        <div>
-          <img src="images/vanilla.jpg"  width="150px" height="150px" alt="kai's vanilla">
+        </span>
+        <span class="m4">
+          <img src="images/globe.png"  width="150px" height="150px" style="border-radius: 80%" alt="kai's vanilla">
           <h4>Contacts</h4>
           <p>Fill in your contact</p>
+        </span>
         </div>
           <button>Button</button>
        </section>
-       <div class="section_five"></div>
-       <section>
+             <section>
         <h2>F.A.Q</h2>
-        <div>
-        <H4>How does it work</H4>
+        <div class="section_five">
+        <div class="For_info">
+            <div class="info_a">
+            <span class="info1">
+        <H4><strong>How does it work</strong></H4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </span>
+                <span class="info2">
+                <h4><strong>How does it work</strong></h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </span>
+           </div>
+           <div class="info_b">
+        <span class="info3">
+            <h4><strong>How does it work</strong></h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </span>
+        <span class="info4">
+                <h4><strong>How does it work</strong></h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </span>
     </div>
-    <div>
-        <p>Registration is a necessary mandate and without that individuals cannot be enrolled</p>
-    </div>
-    <div>
-        <h4>How does it work</h4>
-        <p>Registration is done online. Click on the link below. you will be sent to another page where you will fill your information and make payment.</p>
-    </div>
-    <div>
-        <h4>How does this work</h4>
-        <p>An email will be sent to you after  a few days of registration, if you don't receive any email reach out to us by the contact details provided</p>
-    </div>
-    <div>
-        <h4>How does this work</h4>
-        <p>A final  email will be sent to you a week before the programme starts detailing the schedules for every events to be taken place and the contacts of your respective mentors so please reach out to them when faced any challenges</p>
     </div>
     </section>
     </main>
     <footer>
                 <section>
-                    <div>
-                        <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/bts-logo.png" alt="bts-logo"/>                </div>
-                <div>
-                    <a href="https://www.linedin.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 24 24">
+                <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/bts-logo.png" alt="bts-logo"/>                </div>
+                 <div class="footer_links">
+                        <a href="https://www.linedin.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 24 24">
                 <path d="M21,3H3v18h18V3z M9,17H6.477v-7H9V17z M7.694,8.717c-0.771,0-1.286-0.514-1.286-1.2s0.514-1.2,1.371-1.2 c0.771,0,1.286,0.514,1.286,1.2S8.551,8.717,7.694,8.717z M18,17h-2.442v-3.826c0-1.058-0.651-1.302-0.895-1.302 s-1.058,0.163-1.058,1.302c0,0.163,0,3.826,0,3.826h-2.523v-7h2.523v0.977C13.93,10.407,14.581,10,15.802,10 C17.023,10,18,10.977,18,13.174V17z"></path>
             </svg></a>
-            <a href="https://www.gmail.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+            <a href="https://www.gmail.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 50 50">
                 <path d="M12 23.403V23.39 10.389L11.88 10.3h-.01L9.14 8.28C7.47 7.04 5.09 7.1 3.61 8.56 2.62 9.54 2 10.9 2 12.41v3.602L12 23.403zM38 23.39v.013l10-7.391V12.41c0-1.49-.6-2.85-1.58-3.83-1.46-1.457-3.765-1.628-5.424-.403L38.12 10.3 38 10.389V23.39zM14 24.868l10.406 7.692c.353.261.836.261 1.189 0L36 24.868V11.867L25 20l-11-8.133V24.868zM38 25.889V41c0 .552.448 1 1 1h6.5c1.381 0 2.5-1.119 2.5-2.5V18.497L38 25.889zM12 25.889L2 18.497V39.5C2 40.881 3.119 42 4.5 42H11c.552 0 1-.448 1-1V25.889z"></path>
                 </svg></a>
-            <a href="https://www.twitter.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+            <a href="https://www.twitter.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 50 50">
                 <path d="M 6.9199219 6 L 21.136719 26.726562 L 6.2285156 44 L 9.40625 44 L 22.544922 28.777344 L 32.986328 44 L 43 44 L 28.123047 22.3125 L 42.203125 6 L 39.027344 6 L 26.716797 20.261719 L 16.933594 6 L 6.9199219 6 z"></path>
                 </svg></a>
             </div>
-                <p>Reach out to us</p>
+            <div class="copy">
+                <p>&copy; copyright </p>
+            </div>
         </section>
     </footer>
 </body>
