committing all changes in headphones

--- a/headphones/1-index.html
+++ b/headphones/1-index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="1-styles.css">
-    <link rel="stylesheet" href="demo.css">
-
+   
 </head>
 <body>
     <div class="container1">
@@ -25,14 +24,14 @@
     </nav>
 </header>
 <main>
-   <span class="container2">
-    <h1 style="color: beige; font-size: 40px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
-    <p style="margin-bottom: 5px;">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-    <span class="container3">
-        <input type="button" value="call for action">
-    </span>
+   
+    <h1 style="color: beige; font-size: 40px; text-align: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
+    <p style="margin-bottom: 5px; color: beige; text-align: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    
+        <button>Call to action</button>
+
         <p style="width: 50%; margin: 0 auto; text-align: center;line-height: 1.6;  word-wrap: break-word;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim fuga voluptatibus inventore non fugit, adipisci voluptatum accusantium consequuntur odit! Optio incidunt quam fugiat consequuntur, culpa cupiditate ea saepe ab dolore?</p>
-    </span>
+    
 </div>
 <div class="container4">
 <h2 style="font-size: 40px;">what do we do...</h2>
