--- a/headphones/2-index.html
+++ b/headphones/2-index.html
@@ -26,13 +26,12 @@
 </header>
 <main>
     <section>
-   <span class="container2">
-    <h1 style="color: beige; font-size: 40px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
-    <p style="margin-bottom: 3%;">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-    <span class="container3">
-        <input type="button" style="margin-bottom: 5%;" value="call for action">
-    </span>
-        <p style="width: 50%; margin: 0 auto; text-align: center;line-height: 1.6;  word-wrap: break-word;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim fuga voluptatibus inventore non fugit, adipisci voluptatum accusantium consequuntur odit! Optio incidunt quam fugiat consequuntur, culpa cupiditate ea saepe ab dolore?</p>
+      <h1 style="color: beige; font-size: 40px; text-align: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
+    <p style="margin-bottom: 3%; text-align: center; color: beige;">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    <button>Call to action</button>
+
+    
+        <p style="width: 50%; margin: 0 auto; text-align: center;line-height: 1.6;  word-wrap: break-word; color: beige;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim fuga voluptatibus inventore non fugit, adipisci voluptatum accusantium consequuntur odit! Optio incidunt quam fugiat consequuntur, culpa cupiditate ea saepe ab dolore?</p>
     </span>
 </section>
 </div>
