committing all changes

--- a/headphones/4-index.html
+++ b/headphones/4-index.html
@@ -29,7 +29,7 @@
    
     <h1 style="color: beige; font-size: 40px; text-align: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
     <p style="margin-bottom: 3%; color: beige; text-align: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-            <input type="button" style="margin-bottom: 5%;" value="call for action">
+            <button>call for action</button>
           <p style="width: 50%; margin: 0 auto; text-align: center;line-height: 1.6;  word-wrap: break-word;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim fuga voluptatibus inventore non fugit, adipisci voluptatum accusantium consequuntur odit! Optio incidunt quam fugiat consequuntur, culpa cupiditate ea saepe ab dolore?</p>
    </section>
 </div>
